# desktop_agent_GUI

./: Omniparser_script.ipynb  README.md  WebAgent.ipynb  booking_benchmark.ipynb  main.py  omniparser_API_overcolab.ipynb  omniparser_Api.py  playwright_config.py  playwright_direct_agent.py  pyproject.toml  qwen_ollama.ipynb  test_enhanced_agent.py  utils-test.ipynb
logs/: mcp_agent_log_20250525_104604.txt  mcp_agent_log_20250525_104706.txt  mcp_agent_log_20250525_105313.txt  missing.txt  omniparser_text_result_20250608_195838.txt  omniparser_text_result_20250608_200438.txt  omniparser_text_result_20250608_200519.txt  playwright_direct_log_20250525_110541.txt  playwright_direct_log_20250525_110819.txt  playwright_direct_log_20250526_103706.txt  playwright_direct_log_20250526_104135.txt  playwright_direct_log_20250526_105023.txt  playwright_direct_log_20250608_191205.txt  playwright_direct_log_20250608_191314.txt  playwright_direct_log_20250608_195741.txt
screenshots/booking-dataset/: booking_dataset.csv  booking_dataset_annotations (1).json
